# frisc

./: Cargo.toml  README.md  task.py
apps/: debug_exit.c  debug_exit.h  uart.c  uart.h
apps/hello/: Makefile  hello.c
emu/: Cargo.toml
emu-cli/: Cargo.toml
emu-cli/src/: main.rs
emu/src/: main.rs
frisc-log-viewer/: package-lock.json  package.json
frisc-log-viewer/app/: layout.tsx  log.tsx  page.tsx
frisc-log-viewer/app/components/: ram_table.tsx  register_table.tsx  step_log_table.tsx
src/: cpu.rs  emulator.rs  instruction.rs  lib.rs  ram.rs  register.rs  step_log.rs
src/mmio_device/: debug_exit.rs  mod.rs  simple_uart.rs
web/: index.html
