workspace = { members = ["emu-cli"] }
[package]
name = "frisc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.207", features = ["derive"] }
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["lib", "cdylib"]
