[package]
name = "emu-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
frisc = { path = "../" }
serde_json = "1.0.124"
xmas-elf = "0.9.1"
